--- a/station_F@UMN/css/coverScreen.css
+++ b/station_F@UMN/css/coverScreen.css
@@ -12,12 +12,16 @@ body{background: black}
     0%{transform: rotate(0deg)}
     100%{transform: rotate(360deg)}
 }
-#leftBlackBlocker{height: 100%;width: 60px;left: 0px;top: 0px;}#rightBlackBlocker{right: 0px;height: 100%;width: 50%;top: 0px;}#topBlackBlocker{top: 0px;right: 0px;width: 100%;height: 10%;}#bottomBlackBlocker{bottom: 0px;left: 0px;height: 50px;width: 100%;}.blackBlocker{background: black;position: fixed;}
+#leftBlackBlocker{height: 100%;width: 2px;left: 0px;top: 0px;}#rightBlackBlocker{right: 0px;height: 100%;width: 50%;top: 0px;}#topBlackBlocker{top: 0px;right: 0px;width: 100%;height: 10%;}#bottomBlackBlocker{bottom: 0px;left: 0px;height: 0px;width: 100%;}.blackBlocker{background: black;position: fixed;}
 
-#imageTile1{bottom: 60px;right: 410px;}#imageTile2{bottom: 245px;right: 410px;}#imageTile3{bottom: 60px;right: 225px;}#imageTile4{right: 225px;bottom: 245px;}#imageTile5{
-    right: 225px;
-    bottom: 430px;
-}#imageTile6{right: 40px;bottom: 245px;}#imageTile7{right: 40px;bottom: 430px;}.imageTile{background: white;width: 180px;height: 180px;position: fixed;transform: rotate(-90deg);}
+#imageTile1,#imageTile1_old{bottom: 0px;right: 400px;}
+#imageTile2,#imageTile2_old{bottom: 1000px;right: 1000px;}
+#imageTile3,#imageTile3_old{bottom: 1000px;right: 1000px;}
+#imageTile4,#imageTile4_old{right: 170px;bottom:240x;}
+#imageTile5,#imageTile5_old{right: 225px;bottom: 240px;}
+#imageTile6,#imageTile6_old{right: 40px;bottom: 465px;}
+#imageTile7,#imageTile7_old{right: 40px;bottom: 240px;}
+.imageTile{background: white;width: 800px;height: 225px;position: fixed;transform: rotate(-90deg);}
 .tileImg{width: 100%;height: 100%}
 #img1{}
 #img2{}
